Fix “Shrink from image border” wrapping

The patch implements a separate KisDefaultBoundsBase::imageBorderRect(),
which always returns the bounds of the image, even for selections.

See more explanations in docs in kis_default_bounds_base.h

BUG:402196