libs/image/kis_default_bounds_node_wrapper.h
@@ -31,6 +31,7 @@ public:
     ~KisDefaultBoundsNodeWrapper() override;
 
     QRect bounds() const override;
+    QRect imageBorderRect() const override;
     bool wrapAroundMode() const override;
     int currentLevelOfDetail() const override;
     int currentTime() const override;
